--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,6 +77,18 @@ p {
     padding: 120px 60px;
 }
 
+.email-link {
+    display: flex;
+    justify-content: center;
+    color: var(--primary-color);
+    font-size: 28px;
+    text-decoration: none;
+}
+
+.email-link:hover {
+    text-decoration: underline;
+}
+
 @media (max-width: 900px) {
     h1 {
         font-size: 44px;
